--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,8 @@
-Click==7.0
-Flask==1.0.2
-Flask-Login==0.4.1
-Flask-SocketIO==3.3.2
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-gevent==1.4.0
-gevent-websocket==0.10.1
-greenlet==0.4.15
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2>=2.10.1
-MarkupSafe==1.1.1
-passlib==1.7.1
-psycopg2==2.7.7
-python-engineio==3.5.1
-python-socketio==3.1.2
-six==1.12.0
-SQLAlchemy==1.3.1
-Werkzeug==0.14.1
-WTForms==2.2.1
+flask==2.2.2
+flask_login==0.6.2
+python-socketio==5.7.2
+flask_wtf==1.0.1
+passlib==1.7.4
+flask_sqlalchemy==3.0.2
+psycopg2-binary==2.9.4
+gunicorn==20.1.0
