--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.2.2
 flask_login==0.6.2
-python-socketio==5.7.2
+Flask-SocketIO==5.3.1
 flask_wtf==1.0.1
 passlib==1.7.4
 flask_sqlalchemy==3.0.2
